crates/cuda-macros/tests/compile_fail/policy_config_invalid_unroll.stderr
error[E0080]: evaluation panicked: partial unroll factor must be in 2..=1024, or 0 for full unrolling
 --> $WORKSPACE/crates/cuda-device/src/thread.rs
  |
  |     const { validate_unroll_factor(FACTOR) }
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `cuda_device::__unroll_config::<1>::{constant#0}` failed inside this call
  |
note: inside `cuda_device::thread::validate_unroll_factor`
 --> $RUST/core/src/panic.rs
  |
  |           $crate::panicking::panic_fmt($crate::const_format_args!($($t)+));
  |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the failure occurred here
  |
 ::: $WORKSPACE/crates/cuda-device/src/thread.rs
  |
  | /     assert!(
  | |         factor == 0 || (factor >= 2 && factor <= 1024),
  | |         "partial unroll factor must be in 2..=1024, or 0 for full unrolling"
  | |     );
  | |_____- in this macro invocation

note: erroneous constant encountered
 --> $WORKSPACE/crates/cuda-device/src/thread.rs
  |
  |     const { validate_unroll_factor(FACTOR) }
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note: the above error was encountered while instantiating `fn __unroll_config::<1>`
  --> tests/compile_fail/policy_config_invalid_unroll.rs:12:1
   |
12 | #[kernel]
   | ^^^^^^^^^
   |
   = note: this note originates in the attribute macro `kernel` (in Nightly builds, run with -Z macro-backtrace for more info)
